# aula_9_bootcamp_python

./: README.md  etl.py  exemplo00.py  exemplo01.py  log_decorator.py  logging_exemplo.py  pipeline.py  pyproject.toml
