[project]
name = "aula-9-bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Sanches",email = "sanchesmil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.5,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
